Visual bug fix on mobile view

--- a/main.css
+++ b/main.css
@@ -53,9 +53,15 @@ html, body
 body
 {
     background-color: var(--background);
-    opacity: 1;
-    background-image: radial-gradient(#1200ff 1.2000000000000002px, var(--background) 1.2000000000000002px);
+    opacity: 1;    
     background-size: 24px 24px;
+}
+@media screen and (min-width:1041px)
+{
+    body
+    {
+        background-image: radial-gradient(#1200ff 1.2000000000000002px, var(--background) 1.2000000000000002px);
+    }
 }
 a
 {
